--- a/src/style.css
+++ b/src/style.css
@@ -1,42 +1,178 @@
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
-  background-color: #ffffff;
-}
-
-.container {
-  height: 100vh;
-}
-
-#containerMain {
-  height: 80%;
+  background-color: #f8fee7;
+  font-size: 1.6rem;
 }
 
 main {
-  background-color: hsl(345, 0%, 96%);
-  width: 100%;
-  height: 80%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
-input[type="number"] {
-  width: 8.5%;
+.component-container {
+  width: 80%;
 }
 
-:root {
-  --top-left: 0px;
-  --top-right: 0px;
-  --bottom-left: 0px;
-  --bottom-right: 0px;
+#Describe {
+  height: auto;
+  margin-top: 2rem;
+}
+
+#content {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+#shape-container {
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  height: 45vh;
 }
 
 #shape {
+  align-self: center;
   background-color: #6464fa;
-  width: 500px;
-  height: 250px;
-  border-radius: var(--top-left) var(--top-right) var(--bottom-right)
-    var(--bottom-left);
+  flex-grow: 2;
+  height: 22rem;
+  max-width: 80%;
 }
 
-button#copyCSS,
-button#copyCSS:hover {
+input[type=text] {
+  background-color: #f8fee7;
+  border: 1px solid #cecefd;
+  border-radius: 5px;
+  padding: 6px 20px;
+  width: 100%;
+}
+
+.side-inputs {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: space-between;
+  max-width: 10%;
+}
+
+#Clipboard {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 25vh;
+  width: 80%;
+}
+
+#clipboard-container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
+}
+
+#copyCSS {
   background-color: #6464fa;
+  border: none;
+  border-radius: 12px;
   color: whitesmoke;
+  display: inline-block;
+  font-size: 2rem;
+  padding: 1rem 2.4rem;
+  text-align: center;
+  text-decoration: none;
+}
+
+@media screen and (max-height: 572px) {
+  #shape {
+    height: 17rem;
+  }
+
+  #shape-container {
+    height: 40vh;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  html {
+    font-size: 58%;
+  }
+  
+  .side-inputs input[type=text] {
+    padding: 6px;
+  }
+
+  #copyCSS {
+    font-size: 1.8rem;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  html {
+    font-size: 50%;
+  }
+
+  #shape {
+    height: 20rem;
+  }
+  
+  #shape-container {
+    width: 100%;
+  }
+
+  #clipboardInput {
+    padding: 6px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  #clipboardInput {
+    padding: 6px;
+  }
+
+  input {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  html {
+    font-size: 50%;
+  }
+
+  #Clipboard {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  html {
+    font-size: 40%;
+  }
+
+  .side-inputs {
+    max-width: 12.5%;
+  }
+
+  #shape {
+    height: 32rem;
+    max-width: 75%;
+  }
+
+  #shape-container {
+    height: 45vh;
+  }
 }
